--- a/manager/media/browser/mcpuk/browser.css
+++ b/manager/media/browser/mcpuk/browser.css
@@ -1,38 +1,97 @@
 /*
  * FCKeditor - The text editor for internet
  * Copyright (C) 2003-2005 Frederico Caldeira Knabben
- * 
+ *
  * Licensed under the terms of the GNU Lesser General Public License:
- * 		http://www.opensource.org/licenses/lgpl-license.php
- * 
+ *              http://www.opensource.org/licenses/lgpl-license.php
+ *
  * For further information visit:
- * 		http://www.fckeditor.net/
- * 
+ *              http://www.fckeditor.net/
+ *
  * "Support Open Source software. What about a donation today?"
- * 
+ *
  * File Name: browser.css
- * 	CSS styles used by all pages that compose the File Browser.
- * 
+ *      CSS styles used by all pages that compose the File Browser.
+ *
  * File Authors:
- * 		Frederico Caldeira Knabben (fredck@fckeditor.net)
+ *              Frederico Caldeira Knabben (fredck@fckeditor.net)
  */
+
+:root {
+    --browser-background: #e3e9f1;
+    --browser-panel-background: #ffffff;
+    --browser-border-color: #8fa7c7;
+    --browser-border-strong-color: #737357;
+    --browser-text-color: #000000;
+    --browser-link-color: #000000;
+    --browser-link-hover-color: #0000fa;
+    --browser-font-family: 'Microsoft Sans Serif', Arial, Helvetica, Verdana;
+    --browser-font-size: 11px;
+    --browser-heading-size: 14px;
+    --browser-spacing-xs: 4px;
+    --browser-spacing-sm: 6px;
+    --browser-spacing-md: 10px;
+    --browser-button-radius: 2px;
+    --browser-progress-background: #F0F7FF;
+    --browser-progress-fill: #8fa7c7;
+    --browser-thumbnail-border: #cccccc;
+    --browser-thumbnail-background: #ffffff;
+}
+
+html,
+body {
+    height: 100%;
+}
 
 body {
     background-color: #e3e9f1;
+    background-color: var(--browser-background, #e3e9f1);
+    color: var(--browser-text-color, #000000);
+    font-family: 'Microsoft Sans Serif', Arial, Helvetica, Verdana;
+    font-family: var(--browser-font-family, 'Microsoft Sans Serif', Arial, Helvetica, Verdana);
+    font-size: 11px;
+    font-size: var(--browser-font-size, 11px);
+}
+
+.browser-body {
+    margin: 0;
+    padding: 0;
+}
+
+.browser-section {
+    padding: var(--browser-spacing-md, 10px);
+}
+
+.FileArea {
+    background-color: #e3e9f1;
+    background-color: var(--browser-background, #e3e9f1);
+    padding: var(--browser-spacing-md, 10px);
 }
 
 form {
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
+    margin: 0;
+    padding: 0;
 }
 
-a, :link, :active, :visited {
+.browser-form {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+a,
+:link,
+:active,
+:visited {
     color: #000000;
+    color: var(--browser-link-color, #000000);
     text-decoration: none;
 }
 
+a:hover,
 :hover {
     color: #0000fa;
+    color: var(--browser-link-hover-color, #0000fa);
 }
 
 a img {
@@ -42,22 +101,52 @@ a img {
 a img.item {
     border-width: 1px;
     border-style: solid;
-    border-color: #ccc;
-    padding: 5px;
-    background-color: #fff;
+    border-color: #cccccc;
+    border-color: var(--browser-thumbnail-border, #cccccc);
+    padding: var(--browser-spacing-xs, 4px);
+    background-color: #ffffff;
+    background-color: var(--browser-thumbnail-background, #ffffff);
 }
 
-frame {
+frame,
+frameset {
     background-color: #e3e9f1;
+    background-color: var(--browser-background, #e3e9f1);
     border-color: #000000;
     border-collapse: collapse;
     border: none;
 }
 
-frameset {
-    background-color: #e3e9f1;
-    border-color: #000000;
+.browser-panel {
+    width: 100%;
+    border: 0;
     border-collapse: collapse;
+    border-spacing: 0;
+}
+
+.browser-panel--full-height {
+    height: 100%;
+}
+
+.browser-panel--resources {
+    border-spacing: var(--browser-spacing-sm, 6px);
+}
+
+.browser-panel--nested {
+    background-color: transparent;
+}
+
+.browser-field-group {
+    display: flex;
+    flex-direction: column;
+    gap: var(--browser-spacing-xs, 4px);
+}
+
+.browser-field-group select,
+.browser-field-group input[type="file"],
+.browser-field-group input[type="text"] {
+    width: 100%;
+    background-color: transparent;
 }
 
 .progress_hollow {
@@ -66,87 +155,89 @@ frameset {
 
 .progress_filled {
     background-color: #8fa7c7;
+    background-color: var(--browser-progress-fill, #8fa7c7);
 }
 
 .progress_bar {
     background-color: #F0F7FF;
+    background-color: var(--browser-progress-background, #F0F7FF);
     border-width: 1px;
     border-color: #000000;
     border-style: solid;
 }
 
 .Frame_none {
-    border-width: 0px;
+    border-width: 0;
     border-style: none;
 }
 
 .Frame_t {
-    border-right: 0px none;
+    border-right: 0 none;
     border-top: 1px solid;
-    border-left: 0px none;
-    border-bottom: 0px none;
+    border-left: 0 none;
+    border-bottom: 0 none;
 }
 
 .Frame_tr {
     border-right: 1px solid;
     border-top: 1px solid;
-    border-left: 0px none;
-    border-bottom: 0px none;
+    border-left: 0 none;
+    border-bottom: 0 none;
 }
 
 .Frame_tl {
-    border-right: 0px none;
+    border-right: 0 none;
     border-top: 1px solid;
     border-left: 1px solid;
-    border-bottom: 0px none;
+    border-bottom: 0 none;
 }
 
 .Frame_r {
     border-right: 1px solid;
-    border-top: 0px none;
-    border-left: 0px none;
-    border-bottom: 0px none;
+    border-top: 0 none;
+    border-left: 0 none;
+    border-bottom: 0 none;
 }
 
 .Frame_l {
-    border-right: 0px none;
-    border-top: 0px none;
+    border-right: 0 none;
+    border-top: 0 none;
     border-left: 1px solid;
-    border-bottom: 0px none;
+    border-bottom: 0 none;
 }
 
 .Frame_rl {
     border-right: 1px solid;
-    border-top: 0px none;
+    border-top: 0 none;
     border-left: 1px solid;
-    border-bottom: 0px none;
+    border-bottom: 0 none;
 }
 
 .Frame_b {
-    border-right: 0px none;
-    border-top: 0px none;
-    border-left: 0px none;
+    border-right: 0 none;
+    border-top: 0 none;
+    border-left: 0 none;
     border-bottom: 1px solid;
 }
 
 .Frame_br {
     border-right: 1px solid;
-    border-top: 0px none;
-    border-left: 0px none;
+    border-top: 0 none;
+    border-left: 0 none;
     border-bottom: 1px solid;
 }
 
 .Frame_bl {
-    border-right: 0px none;
-    border-top: 0px none;
+    border-right: 0 none;
+    border-top: 0 none;
     border-left: 1px solid;
     border-bottom: 1px solid;
 }
 
 .Frame_tb {
-    border-right: 0px none;
+    border-right: 0 none;
     border-top: 1px solid;
-    border-left: 0px none;
+    border-left: 0 none;
     border-bottom: 1px solid;
 }
 
@@ -157,35 +248,37 @@ frameset {
     border-bottom: 1px solid;
 }
 
-body.FileArea {
-
-    background: #e3e9f1;
-    padding: 0;
-}
-
-body, td, input, select {
-    font-size: 11px;
-    font-family: 'Microsoft Sans Serif', Arial, Helvetica, Verdana;
-}
-
 .ActualFolder {
     font-weight: bold;
     font-size: 14px;
+    font-size: var(--browser-heading-size, 14px);
 }
 
 .PopupButtons {
     border-top: #8fa7c7 1px solid;
+    border-top: var(--browser-border-color, #8fa7c7) 1px solid;
     background-color: #ffffff;
-    padding: 7px 10px 7px 10px;
+    background-color: var(--browser-panel-background, #ffffff);
+    padding: 7px 10px;
+    padding: var(--browser-spacing-sm, 6px) var(--browser-spacing-md, 10px);
 }
 
-.Button, button {
-    border-right: #737357 1px solid;
-    border-top: #737357 1px solid;
-    border-left: #737357 1px solid;
+.Button,
+button,
+.browser-button {
+    border: 1px solid #737357;
+    border-color: var(--browser-border-strong-color, #737357);
     color: #ffffff;
-    border-bottom: #737357 1px solid;
+    color: var(--browser-button-text-color, #ffffff);
     background-color: #8fa7c7;
+    background-color: var(--browser-border-color, #8fa7c7);
+    border-radius: var(--browser-button-radius, 2px);
+    cursor: pointer;
+}
+
+.browser-button--full-width {
+    display: block;
+    width: 100%;
 }
 
 .FolderListCurrentFolder img {
