--- a/manager/media/browser/mcpuk/browser.css
+++ b/manager/media/browser/mcpuk/browser.css
@@ -1,103 +1,38 @@
 /*
  * FCKeditor - The text editor for internet
  * Copyright (C) 2003-2005 Frederico Caldeira Knabben
- *
+ * 
  * Licensed under the terms of the GNU Lesser General Public License:
- *              http://www.opensource.org/licenses/lgpl-license.php
- *
+ * 		http://www.opensource.org/licenses/lgpl-license.php
+ * 
  * For further information visit:
- *              http://www.fckeditor.net/
- *
+ * 		http://www.fckeditor.net/
+ * 
  * "Support Open Source software. What about a donation today?"
- *
+ * 
  * File Name: browser.css
- *      CSS styles used by all pages that compose the File Browser.
- *
+ * 	CSS styles used by all pages that compose the File Browser.
+ * 
  * File Authors:
- *              Frederico Caldeira Knabben (fredck@fckeditor.net)
+ * 		Frederico Caldeira Knabben (fredck@fckeditor.net)
  */
 
-:root {
-    --browser-background: #e3e9f1;
-    --browser-panel-background: #ffffff;
-    --browser-border-color: #8fa7c7;
-    --browser-border-strong-color: #737357;
-    --browser-text-color: #000000;
-    --browser-link-color: #000000;
-    --browser-link-hover-color: #0000fa;
-    --browser-font-family: 'Microsoft Sans Serif', Arial, Helvetica, Verdana;
-    --browser-font-size: 11px;
-    --browser-heading-size: 14px;
-    --browser-spacing-xs: 5px;
-    --browser-spacing-sm: 7px;
-    --browser-spacing-md: 10px;
-    --browser-resources-spacing: 4px;
-    --browser-resources-cell-padding: 5px;
-    --browser-button-radius: 0;
-    --browser-button-text-color: #ffffff;
-    --browser-progress-background: #F0F7FF;
-    --browser-progress-fill: #8fa7c7;
-    --browser-thumbnail-border: #cccccc;
-    --browser-thumbnail-background: #ffffff;
-    --browser-thumbnail-padding: 5px;
-}
-
-html,
-body {
-    height: 100%;
-}
-
 body {
     background-color: #e3e9f1;
-    background-color: var(--browser-background, #e3e9f1);
-    color: var(--browser-text-color, #000000);
-    font-family: 'Microsoft Sans Serif', Arial, Helvetica, Verdana;
-    font-family: var(--browser-font-family, 'Microsoft Sans Serif', Arial, Helvetica, Verdana);
-    font-size: 11px;
-    font-size: var(--browser-font-size, 11px);
-}
-
-td,
-input,
-select {
-    font-family: var(--browser-font-family, 'Microsoft Sans Serif', Arial, Helvetica, Verdana);
-    font-size: var(--browser-font-size, 11px);
-}
-
-.browser-body {
-    margin: 0;
-    padding: 0;
-}
-
-.FileArea {
-    background-color: #e3e9f1;
-    background-color: var(--browser-background, #e3e9f1);
-    margin: var(--browser-spacing-md, 10px);
-    padding: 0;
 }
 
 form {
-    margin: 0;
-    padding: 0;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
 }
 
-.browser-form {
-    height: 100%;
-}
-
-a,
-:link,
-:active,
-:visited {
+a, :link, :active, :visited {
     color: #000000;
-    color: var(--browser-link-color, #000000);
     text-decoration: none;
 }
 
-a:hover,
 :hover {
     color: #0000fa;
-    color: var(--browser-link-hover-color, #0000fa);
 }
 
 a img {
@@ -107,25 +42,176 @@ a img {
 a img.item {
     border-width: 1px;
     border-style: solid;
-    border-color: #cccccc;
-    border-color: var(--browser-thumbnail-border, #cccccc);
-    padding: var(--browser-thumbnail-padding, 5px);
-    background-color: #ffffff;
-    background-color: var(--browser-thumbnail-background, #ffffff);
+    border-color: #ccc;
+    padding: 5px;
+    background-color: #fff;
 }
 
-frame,
-frameset {
+frame {
     background-color: #e3e9f1;
-    background-color: var(--browser-background, #e3e9f1);
     border-color: #000000;
     border-collapse: collapse;
     border: none;
 }
 
+frameset {
+    background-color: #e3e9f1;
+    border-color: #000000;
+    border-collapse: collapse;
+}
+
+.progress_hollow {
+    background-color: transparent;
+}
+
+.progress_filled {
+    background-color: #8fa7c7;
+}
+
+.progress_bar {
+    background-color: #F0F7FF;
+    border-width: 1px;
+    border-color: #000000;
+    border-style: solid;
+}
+
+.Frame_none {
+    border-width: 0px;
+    border-style: none;
+}
+
+.Frame_t {
+    border-right: 0px none;
+    border-top: 1px solid;
+    border-left: 0px none;
+    border-bottom: 0px none;
+}
+
+.Frame_tr {
+    border-right: 1px solid;
+    border-top: 1px solid;
+    border-left: 0px none;
+    border-bottom: 0px none;
+}
+
+.Frame_tl {
+    border-right: 0px none;
+    border-top: 1px solid;
+    border-left: 1px solid;
+    border-bottom: 0px none;
+}
+
+.Frame_r {
+    border-right: 1px solid;
+    border-top: 0px none;
+    border-left: 0px none;
+    border-bottom: 0px none;
+}
+
+.Frame_l {
+    border-right: 0px none;
+    border-top: 0px none;
+    border-left: 1px solid;
+    border-bottom: 0px none;
+}
+
+.Frame_rl {
+    border-right: 1px solid;
+    border-top: 0px none;
+    border-left: 1px solid;
+    border-bottom: 0px none;
+}
+
+.Frame_b {
+    border-right: 0px none;
+    border-top: 0px none;
+    border-left: 0px none;
+    border-bottom: 1px solid;
+}
+
+.Frame_br {
+    border-right: 1px solid;
+    border-top: 0px none;
+    border-left: 0px none;
+    border-bottom: 1px solid;
+}
+
+.Frame_bl {
+    border-right: 0px none;
+    border-top: 0px none;
+    border-left: 1px solid;
+    border-bottom: 1px solid;
+}
+
+.Frame_tb {
+    border-right: 0px none;
+    border-top: 1px solid;
+    border-left: 0px none;
+    border-bottom: 1px solid;
+}
+
+.Frame_all {
+    border-right: 1px solid;
+    border-top: 1px solid;
+    border-left: 1px solid;
+    border-bottom: 1px solid;
+}
+
+body.FileArea {
+
+    background: #e3e9f1;
+    padding: 0;
+}
+
+body, td, input, select {
+    font-size: 11px;
+    font-family: 'Microsoft Sans Serif', Arial, Helvetica, Verdana;
+}
+
+.ActualFolder {
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.PopupButtons {
+    border-top: #8fa7c7 1px solid;
+    background-color: #ffffff;
+    padding: 7px 10px 7px 10px;
+}
+
+.Button, button {
+    border-right: #737357 1px solid;
+    border-top: #737357 1px solid;
+    border-left: #737357 1px solid;
+    color: #ffffff;
+    border-bottom: #737357 1px solid;
+    background-color: #8fa7c7;
+}
+
+.FolderListCurrentFolder img {
+    background-image: url(images/FolderOpened.gif);
+}
+
+.FolderListFolder img {
+    background-image: url(images/Folder.gif);
+}
+
+html,
+body {
+    height: 100%;
+}
+
+.browser-body {
+    margin: 0;
+    padding: 0;
+}
+
+.browser-body.FileArea {
+    margin: 10px;
+}
+
 .browser-panel {
-    border: 0;
-    border-collapse: separate;
+    border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
 }
@@ -139,11 +225,12 @@ frameset {
 }
 
 .browser-panel--resources {
-    border-spacing: var(--browser-resources-spacing, 4px);
+    border-collapse: separate;
+    border-spacing: 4px;
 }
 
 .browser-panel--resources td {
-    padding: var(--browser-resources-cell-padding, 5px);
+    padding: 5px;
 }
 
 .browser-panel--nested {
@@ -165,143 +252,6 @@ frameset {
     background-color: transparent;
 }
 
-.progress_hollow {
-    background-color: transparent;
-}
-
-.progress_filled {
-    background-color: #8fa7c7;
-    background-color: var(--browser-progress-fill, #8fa7c7);
-}
-
 .progress_bar {
-    background-color: #F0F7FF;
-    background-color: var(--browser-progress-background, #F0F7FF);
-    border-width: 1px;
-    border-color: #000000;
-    border-style: solid;
     width: 100%;
-}
-
-.Frame_none {
-    border-width: 0;
-    border-style: none;
-}
-
-.Frame_t {
-    border-right: 0 none;
-    border-top: 1px solid;
-    border-left: 0 none;
-    border-bottom: 0 none;
-}
-
-.Frame_tr {
-    border-right: 1px solid;
-    border-top: 1px solid;
-    border-left: 0 none;
-    border-bottom: 0 none;
-}
-
-.Frame_tl {
-    border-right: 0 none;
-    border-top: 1px solid;
-    border-left: 1px solid;
-    border-bottom: 0 none;
-}
-
-.Frame_r {
-    border-right: 1px solid;
-    border-top: 0 none;
-    border-left: 0 none;
-    border-bottom: 0 none;
-}
-
-.Frame_l {
-    border-right: 0 none;
-    border-top: 0 none;
-    border-left: 1px solid;
-    border-bottom: 0 none;
-}
-
-.Frame_rl {
-    border-right: 1px solid;
-    border-top: 0 none;
-    border-left: 1px solid;
-    border-bottom: 0 none;
-}
-
-.Frame_b {
-    border-right: 0 none;
-    border-top: 0 none;
-    border-left: 0 none;
-    border-bottom: 1px solid;
-}
-
-.Frame_br {
-    border-right: 1px solid;
-    border-top: 0 none;
-    border-left: 0 none;
-    border-bottom: 1px solid;
-}
-
-.Frame_bl {
-    border-right: 0 none;
-    border-top: 0 none;
-    border-left: 1px solid;
-    border-bottom: 1px solid;
-}
-
-.Frame_tb {
-    border-right: 0 none;
-    border-top: 1px solid;
-    border-left: 0 none;
-    border-bottom: 1px solid;
-}
-
-.Frame_all {
-    border-right: 1px solid;
-    border-top: 1px solid;
-    border-left: 1px solid;
-    border-bottom: 1px solid;
-}
-
-.ActualFolder {
-    font-weight: bold;
-    font-size: 14px;
-    font-size: var(--browser-heading-size, 14px);
-}
-
-.PopupButtons {
-    border-top: #8fa7c7 1px solid;
-    border-top: var(--browser-border-color, #8fa7c7) 1px solid;
-    background-color: #ffffff;
-    background-color: var(--browser-panel-background, #ffffff);
-    padding: 7px 10px;
-    padding: var(--browser-spacing-sm, 7px) var(--browser-spacing-md, 10px);
-}
-
-.Button,
-button,
-.browser-button {
-    border: 1px solid #737357;
-    border-color: var(--browser-border-strong-color, #737357);
-    color: #ffffff;
-    color: var(--browser-button-text-color, #ffffff);
-    background-color: #8fa7c7;
-    background-color: var(--browser-border-color, #8fa7c7);
-    border-radius: var(--browser-button-radius, 0);
-    cursor: pointer;
-}
-
-.browser-button--full-width {
-    display: block;
-    width: 100%;
-}
-
-.FolderListCurrentFolder img {
-    background-image: url(images/FolderOpened.gif);
-}
-
-.FolderListFolder img {
-    background-image: url(images/Folder.gif);
 }
