--- a/manager/media/browser/mcpuk/browser.css
+++ b/manager/media/browser/mcpuk/browser.css
@@ -179,13 +179,26 @@ body, td, input, select {
     padding: 7px 10px 7px 10px;
 }
 
-.Button, button {
+.Button, button, .browser-button {
     border-right: #737357 1px solid;
     border-top: #737357 1px solid;
     border-left: #737357 1px solid;
     color: #ffffff;
     border-bottom: #737357 1px solid;
     background-color: #8fa7c7;
+}
+
+.browser-button {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    text-align: left;
+    width: auto;
+}
+
+.browser-button--full-width {
+    display: block;
+    width: 100%;
 }
 
 .FolderListCurrentFolder img {
