--- a/manager/media/browser/mcpuk/browser.css
+++ b/manager/media/browser/mcpuk/browser.css
@@ -33,8 +33,19 @@
     --mcpuk-progress-track-color: #e6e6e6;
     --mcpuk-progress-border-color: #bcbcbc;
     --mcpuk-button-border-color: #b3b3b3;
-    --mcpuk-button-background: #f5f5f5;
+    --mcpuk-button-background-start: #fafafa;
+    --mcpuk-button-background-end: #d2d2d2;
+    --mcpuk-button-hover-background-end: #e5e5e5;
+    --mcpuk-button-active-background-start: #f0f0f0;
+    --mcpuk-button-active-background-end: #cecece;
     --mcpuk-button-text-color: #444444;
+    --mcpuk-action-button-start: #8aae4b;
+    --mcpuk-action-button-end: #66901b;
+    --mcpuk-action-button-hover-start: #90bf40;
+    --mcpuk-action-button-hover-end: #82af33;
+    --mcpuk-action-button-active-start: #749c2f;
+    --mcpuk-action-button-active-end: #4b7109;
+    --mcpuk-action-button-text-color: #ffffff;
     --mcpuk-popup-border-color: #cccccc;
     --mcpuk-popup-background: #ffffff;
     --mcpuk-font-family: Meiryo, "Hiragino Kaku Gothic Pro", Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -52,6 +63,15 @@ body {
     font-family: var(--mcpuk-font-family);
     font-size: var(--mcpuk-font-size);
     line-height: 1.5;
+}
+
+body,
+td,
+input,
+select,
+button {
+    font-family: var(--mcpuk-font-family);
+    font-size: var(--mcpuk-font-size);
 }
 
 form {
@@ -218,12 +238,41 @@ select {
 
 .Button,
 button {
-    border-right: 1px solid var(--mcpuk-button-border-color);
-    border-top: 1px solid var(--mcpuk-button-border-color);
-    border-left: 1px solid var(--mcpuk-button-border-color);
-    border-bottom: 1px solid var(--mcpuk-button-border-color);
-    background-color: var(--mcpuk-button-background);
+    border: 1px solid var(--mcpuk-button-border-color);
+    background: linear-gradient(to bottom, var(--mcpuk-button-background-start), var(--mcpuk-button-background-end));
     color: var(--mcpuk-button-text-color);
+    border-radius: 3px;
+    font: inherit;
+}
+
+.Button:hover,
+button:hover {
+    background: linear-gradient(to bottom, var(--mcpuk-button-background-start), var(--mcpuk-button-hover-background-end));
+}
+
+.Button:active,
+button:active {
+    background: linear-gradient(to bottom, var(--mcpuk-button-active-background-start), var(--mcpuk-button-active-background-end));
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.BrowserButton--action {
+    border-color: var(--mcpuk-action-button-end);
+    background: linear-gradient(to bottom, var(--mcpuk-action-button-start), var(--mcpuk-action-button-end));
+    color: var(--mcpuk-action-button-text-color);
+}
+
+.BrowserButton--action:hover {
+    background: linear-gradient(to bottom, var(--mcpuk-action-button-hover-start), var(--mcpuk-action-button-hover-end));
+}
+
+.BrowserButton--action:active {
+    background: linear-gradient(to bottom, var(--mcpuk-action-button-active-start), var(--mcpuk-action-button-active-end));
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25);
+}
+
+.BrowserButtonTable td {
+    color: inherit;
 }
 
 .FolderListCurrentFolder img {
